--- a/index.html
+++ b/index.html
@@ -143,51 +143,51 @@
 <div class="folder-container">
 <!-- Anime #1 -->
 <div class="folder" onclick="openModal('modalA1')">
-<img src="https://image.tmdb.org/t/p/original/9gpc8kIhNEG7r0VTkyI9aVBxdO3.jpg" alt="BELLEZA VERDADERA">
+<img src="https://image.tmdb.org/t/p/original/9gpc8kIhNEG7r0VTkyI9aVBxdO3.jpg" alt="BELLEZA VERDADERA"><div class="label">#1</div>
 </div>
 <!-- Anime #2 -->
 <div class="folder" onclick="openModal('modalA2')">
-<img src="https://image.tmdb.org/t/p/original/lMVkOrMaWEkHZLdPksKGcdi6hJg.jpg" alt="365 DAYS TO THE WEDDING">
+<img src="https://image.tmdb.org/t/p/original/lMVkOrMaWEkHZLdPksKGcdi6hJg.jpg" alt="365 DAYS TO THE WEDDING"><div class="label">#2</div>
 </div>
 <!-- Anime #3 -->
 <div class="folder" onclick="openModal('modalA3')">
-<img src="https://image.tmdb.org/t/p/original/wtQIgqEQEIQnNqLVGTShUf7qLap.jpg" alt="UZUMAKI">
+<img src="https://image.tmdb.org/t/p/original/wtQIgqEQEIQnNqLVGTShUf7qLap.jpg" alt="UZUMAKI"><div class="label">#3</div>
 </div>
 <!-- Anime #4 -->
 <div class="folder" onclick="openModal('modalA4')">
-<img src="https://image.tmdb.org/t/p/original/A6mxBwvvv63JXZm3xXKv4SugE0L.jpg" alt="MY DRESS-UP DARLING">
+<img src="https://image.tmdb.org/t/p/original/A6mxBwvvv63JXZm3xXKv4SugE0L.jpg" alt="MY DRESS-UP DARLING"><div class="label">#4</div>
 </div>
 <!-- Anime #5 -->
 <div class="folder" onclick="openModal('modalA5')">
-<img src="https://image.tmdb.org/t/p/original/762nyWtk1AVUQVlyQJ4FGlW2Kfd.jpg" alt="DOSANKO GAL WA NAMARA MENKOI">
+<img src="https://image.tmdb.org/t/p/original/762nyWtk1AVUQVlyQJ4FGlW2Kfd.jpg" alt="DOSANKO GAL WA NAMARA MENKOI"><div class="label">#5</div>
 </div>
 <!-- Anime #6 -->
 <div class="folder" onclick="openModal('modalA6')">
-<img src="https://image.tmdb.org/t/p/original/h98pMTNhtCQOi50r03xWaiC9PKz.jpg" alt="BOCCHI THE ROCK!">
+<img src="https://image.tmdb.org/t/p/original/h98pMTNhtCQOi50r03xWaiC9PKz.jpg" alt="BOCCHI THE ROCK!"><div class="label">#6</div>
 </div>
 <!-- Anime #7 -->
 <div class="folder" onclick="openModal('modalA7')">
-<img src="https://image.tmdb.org/t/p/original/hfnzByZIRj6rx8xaxzS2zDilei1.jpg" alt="ALYA SOMETIMES HIDES HER FEELINGS IN RUSSIAN">
+<img src="https://image.tmdb.org/t/p/original/hfnzByZIRj6rx8xaxzS2zDilei1.jpg" alt="ALYA SOMETIMES HIDES HER FEELINGS IN RUSSIAN"><div class="label">#7</div>
 </div>
 <!-- Anime #8 -->
 <div class="folder" onclick="openModal('modalA8')">
-<img src="https://image.tmdb.org/t/p/original/2qk71WwLTwKUjORZTdlMWpkLngp.jpg" alt="PSEUDO HAREM">
+<img src="https://image.tmdb.org/t/p/original/2qk71WwLTwKUjORZTdlMWpkLngp.jpg" alt="PSEUDO HAREM"><div class="label">#8</div>
 </div>
 <!-- Anime #9 -->
 <div class="folder" onclick="openModal('modalA9')">
-<img src="https://image.tmdb.org/t/p/original/8pBLEtE7IEvXANlpj5llTOpPyqS.jpg" alt="MY HAPPY MARRIAGE">
+<img src="https://image.tmdb.org/t/p/original/8pBLEtE7IEvXANlpj5llTOpPyqS.jpg" alt="MY HAPPY MARRIAGE"><div class="label">#9</div>
 </div>
 <!-- Anime #10 -->
 <div class="folder" onclick="openModal('modalA10')">
-<img src="https://image.tmdb.org/t/p/original/f5gulXwRQL31nJoTg6liqwDRpm7.jpg" alt="MORE THAN A MARRIED COUPLE BUT NOT LOVERS">
+<img src="https://image.tmdb.org/t/p/original/f5gulXwRQL31nJoTg6liqwDRpm7.jpg" alt="MORE THAN A MARRIED COUPLE BUT NOT LOVERS"><div class="label">#10</div>
 </div>
 <!-- Anime #11 -->
 <div class="folder" onclick="openModal('modalA11')">
-<img src="https://image.tmdb.org/t/p/original/iCKAzatzgsoFZfIlInRp2Xs3iok.jpg" alt="SHIKANOKO NOKONOKO KOSHITANTAN">
+<img src="https://image.tmdb.org/t/p/original/iCKAzatzgsoFZfIlInRp2Xs3iok.jpg" alt="SHIKANOKO NOKONOKO KOSHITANTAN"><div class="label">#11</div>
 </div>
 <!-- Anime #12 -->
 <div class="folder" onclick="openModal('modalAnime12')">
-<img src="https://image.tmdb.org/t/p/original/aZupC6eJhTe82e5I0JRaOBjFHOd.jpg" alt="Pantheon">
+<img src="https://image.tmdb.org/t/p/original/aZupC6eJhTe82e5I0JRaOBjFHOd.jpg" alt="Pantheon"><div class="label">#12</div>
 </div>
 </div>
 
@@ -737,6 +737,26 @@
 
 
 
+
+<!-- AQUI ESTA EL CÓDIGO DE LA "ETIQUETA" -->
+
+<style>
+    .poster-container {
+        position: relative;
+        display: inline-block;
+    }
+    .label {
+        position: absolute;
+        top: 1px;
+        right: 1px;
+        background: red;
+        color: white;
+        padding: 3px 5px;
+        font-size: 12px;
+        font-weight: bold;
+        border-radius: 3px;
+    }
+</style>
 
 <script>
 (function() {
